--- a/manifest.json
+++ b/manifest.json
@@ -17,9 +17,7 @@
             "delay" : 0
         },
         /* 模块配置 */
-        "modules" : {
-            "Maps" : {}
-        },
+        "modules" : {},
         /* 应用发布信息 */
         "distribute" : {
             /* android打包配置 */
@@ -60,12 +58,7 @@
             /* SDK配置 */
             "sdkConfigs" : {
                 "oauth" : {},
-                "maps" : {
-                    "baidu" : {
-                        "appkey_ios" : "",
-                        "appkey_android" : ""
-                    }
-                }
+                "maps" : {}
             }
         }
     },
