--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name" : "hike",
     "appid" : "__UNI__1D77D64",
-    "description" : "",
+    "description" : "周游世界",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
@@ -65,7 +65,8 @@
                     "system" : {
                         "__platform__" : [ "ios", "android" ]
                     }
-                }
+                },
+                "ad" : {}
             }
         }
     },
